@@ -1,3 +1,9 @@
+1772.	[bug]		Change #1740 needed more work in 9.2 as bit-labels
+			are still supported. [RT #13015]
+
+1771.	[bug]		Built-in zones did not have SOA or NS records.
+			[RT #13015]
+
 1770.	[bug]		named-checkconf failed to report missing a missing
 			file clause for rbt{64} master/hint zones. [RT#13009]
 
